# mntime

./: Cargo.toml  README.md  check  design.md
.github/workflows/: check.yaml
docs/: design.md
src/: app.rs  cli_args.rs  cmd.rs  lib.rs  main.rs  mean.rs  stats.rs  terminal.rs
tests/: common.rs  integration_tests.rs
tools/: check_readme.sh  publish_crate.sh  readme_main.diff
