[package]
name = "mntime"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"
authors = ["arkbig"]
description = "The mntime command executes the specified \"m\" commands \"n\" times and calculates the mean \"μ\"(\\mu) of usage time and memory."
readme = "README.md"
repository = "https://github.com/arkbig/mntime"
license = "Zlib"
keywords = ["time"]
categories = ["command-line-utilities", "development-tools::profiling"]

[lib]
name = "mntime_lib"

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
clap = { version = "3.2.20", features = ["derive"] }
crossterm = "0.25.0"
num-format = "0.4.0"
once_cell = "1.15.0"
proc-exit = "1.0.3"
regex = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.35"
throbber-widgets-tui = "0.1.1"
tui = "0.19.0"

[dev-dependencies]
approx = "0.5.1"
