[package]
name = "mntime"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["arkbig"]
description = "Execute \"m\" commands \"n\" times to calculate mean of usage time and memory. As an alternative to \"time\", \"gnu-time\" is used internally."
readme = "README.md"
repository = "https://github.com/arkbig/mntime"
license = "Zlib"
keywords = ["time"]
categories = ["command-line-utilities", "development-tools::profiling"]

[lib]
name = "mntime_lib"

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
num-format = "0.4.4"
once_cell = "1.19.0"
proc-exit = "2.0.1"
regex = "1.10.3"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
throbber-widgets-tui = "0.4.1"
ratatui = "0.26.1"

[dev-dependencies]
approx = "0.5.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
